--- a/examples/PySDM_examples/Buch_et_al_2024/plot_script_sd_update_2d.ipynb
+++ b/examples/PySDM_examples/Buch_et_al_2024/plot_script_sd_update_2d.ipynb
@@ -4,12 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2D prescribed flow with bimodal aerosol population\n",
+    "# 2D prescribed flow with time-dependent aerosol injection\n",
     "\n",
-    "Author: Jatan Buch (v1, 240401)\n",
-    "\n",
-    "**NOTES**: \n",
-    "- based on Figs. 8 & 9 from Arabas et al. 2015 (Geosci. Model Dev.) https://doi.org/10.5194/gmd-8-1677-2015"
+    "Author: Jatan Buch (v1, 240703)"
    ]
   },
   {
@@ -24,16 +21,7 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/hyfives-lamont/Desktop/cloud_seeding/PySDM/PySDM/backends/impl_numba/conf.py:19: UserWarning: Disabling Numba threading due to ARM64 CPU (atomics do not work yet)\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# PySDM libraries\n",
     "from PySDM_examples.Szumowski_et_al_1998 import Storage\n",
@@ -48,7 +36,7 @@
     "# mod case files\n",
     "from case_files.settings_2d import Settings\n",
     "from case_files.spin_up_2d import SpinUp\n",
-    "from case_files.simulation_2d import Simulation\n",
+    "from case_files.simulation_sd_update_2d import Simulation\n",
     "\n",
     "import numpy as np\n",
     "import xarray\n",
@@ -66,7 +54,7 @@
     "%config IPython.matplotlib.backend = 'retina'\n",
     "%config InlineBackend.figure_format = 'retina'\n",
     "\n",
-    "sav_file_path= \"../../sav_files/run_2D_output_files/\""
+    "sav_file_path= \"/Users/hyfives-lamont/Desktop/cloud_seeding/sav_files/run_2D_output_files/\""
    ]
   },
   {
@@ -85,105 +73,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/hyfives-lamont/Desktop/cloud_seeding/PySDM/PySDM/backends/numba.py:45: UserWarning: Disabling Numba threading due to ARM64 CPU (atomics do not work yet)\n",
+      "  warnings.warn(\n",
       "<__array_function__ internals>:200: RuntimeWarning: invalid value encountered in cast\n",
       "<__array_function__ internals>:200: RuntimeWarning: invalid value encountered in cast\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0% (times since last print: cpu=12.2s wall=12.4s)\n",
-      "1.1% (times since last print: cpu=42.2s wall=42.7s)\n",
-      "2.2% (times since last print: cpu=1.0s wall=1.1s)\n",
-      "3.3% (times since last print: cpu=1.1s wall=1.1s)\n",
-      "4.4% (times since last print: cpu=1.1s wall=1.1s)\n",
-      "5.6% (times since last print: cpu=1.1s wall=1.1s)\n",
-      "6.7% (times since last print: cpu=1.2s wall=1.2s)\n",
-      "7.8% (times since last print: cpu=1.3s wall=1.3s)\n",
-      "8.9% (times since last print: cpu=1.4s wall=1.4s)\n",
-      "10.0% (times since last print: cpu=1.5s wall=1.6s)\n",
-      "11.1% (times since last print: cpu=1.8s wall=1.8s)\n",
-      "12.2% (times since last print: cpu=2.0s wall=2.0s)\n",
-      "13.3% (times since last print: cpu=2.1s wall=2.1s)\n",
-      "14.4% (times since last print: cpu=2.2s wall=2.2s)\n",
-      "15.6% (times since last print: cpu=2.2s wall=2.3s)\n",
-      "16.7% (times since last print: cpu=2.3s wall=2.3s)\n",
-      "17.8% (times since last print: cpu=2.2s wall=2.3s)\n",
-      "18.9% (times since last print: cpu=2.2s wall=2.2s)\n",
-      "20.0% (times since last print: cpu=2.1s wall=2.2s)\n",
-      "21.1% (times since last print: cpu=2.0s wall=2.0s)\n",
-      "22.2% (times since last print: cpu=2.0s wall=2.0s)\n",
-      "23.3% (times since last print: cpu=2.0s wall=2.0s)\n",
-      "24.4% (times since last print: cpu=1.9s wall=1.9s)\n",
-      "25.6% (times since last print: cpu=1.9s wall=1.9s)\n",
-      "26.7% (times since last print: cpu=1.8s wall=1.9s)\n",
-      "27.8% (times since last print: cpu=1.8s wall=1.8s)\n",
-      "28.9% (times since last print: cpu=1.8s wall=1.8s)\n",
-      "30.0% (times since last print: cpu=1.7s wall=1.7s)\n",
-      "31.1% (times since last print: cpu=1.7s wall=1.7s)\n",
-      "32.2% (times since last print: cpu=1.7s wall=1.7s)\n",
-      "33.3% (times since last print: cpu=1.7s wall=1.7s)\n",
-      "34.4% (times since last print: cpu=1.7s wall=1.7s)\n",
-      "35.6% (times since last print: cpu=1.7s wall=1.7s)\n",
-      "36.7% (times since last print: cpu=1.7s wall=1.7s)\n",
-      "37.8% (times since last print: cpu=1.7s wall=1.7s)\n",
-      "38.9% (times since last print: cpu=1.7s wall=1.7s)\n",
-      "40.0% (times since last print: cpu=1.7s wall=1.7s)\n",
-      "41.1% (times since last print: cpu=1.7s wall=1.7s)\n",
-      "42.2% (times since last print: cpu=1.7s wall=1.7s)\n",
-      "43.3% (times since last print: cpu=1.7s wall=1.7s)\n",
-      "44.4% (times since last print: cpu=1.7s wall=1.7s)\n",
-      "45.6% (times since last print: cpu=1.7s wall=1.7s)\n",
-      "46.7% (times since last print: cpu=1.8s wall=1.8s)\n",
-      "47.8% (times since last print: cpu=1.9s wall=1.9s)\n",
-      "48.9% (times since last print: cpu=1.9s wall=2.0s)\n",
-      "50.0% (times since last print: cpu=2.0s wall=2.0s)\n",
-      "51.1% (times since last print: cpu=2.0s wall=2.1s)\n",
-      "52.2% (times since last print: cpu=2.1s wall=2.1s)\n",
-      "53.3% (times since last print: cpu=2.0s wall=2.1s)\n",
-      "54.4% (times since last print: cpu=2.1s wall=2.2s)\n",
-      "55.6% (times since last print: cpu=2.1s wall=2.1s)\n",
-      "56.7% (times since last print: cpu=2.0s wall=2.0s)\n",
-      "57.8% (times since last print: cpu=2.0s wall=2.0s)\n",
-      "58.9% (times since last print: cpu=2.0s wall=2.0s)\n",
-      "60.0% (times since last print: cpu=1.9s wall=1.9s)\n",
-      "61.1% (times since last print: cpu=1.8s wall=1.8s)\n",
-      "62.2% (times since last print: cpu=1.8s wall=1.8s)\n",
-      "63.3% (times since last print: cpu=1.7s wall=1.7s)\n",
-      "64.4% (times since last print: cpu=1.7s wall=1.7s)\n",
-      "65.6% (times since last print: cpu=1.7s wall=1.8s)\n",
-      "66.7% (times since last print: cpu=1.8s wall=1.8s)\n",
-      "67.8% (times since last print: cpu=3.7s wall=3.8s)\n",
-      "68.9% (times since last print: cpu=1.8s wall=1.8s)\n",
-      "70.0% (times since last print: cpu=1.8s wall=1.8s)\n",
-      "71.1% (times since last print: cpu=1.8s wall=1.9s)\n",
-      "72.2% (times since last print: cpu=1.8s wall=1.9s)\n",
-      "73.3% (times since last print: cpu=1.8s wall=1.8s)\n",
-      "74.4% (times since last print: cpu=1.8s wall=1.8s)\n",
-      "75.6% (times since last print: cpu=1.8s wall=1.8s)\n",
-      "76.7% (times since last print: cpu=1.7s wall=1.8s)\n",
-      "77.8% (times since last print: cpu=1.7s wall=1.7s)\n",
-      "78.9% (times since last print: cpu=1.7s wall=1.7s)\n",
-      "80.0% (times since last print: cpu=1.7s wall=1.7s)\n",
-      "81.1% (times since last print: cpu=1.8s wall=1.8s)\n",
-      "82.2% (times since last print: cpu=1.7s wall=1.7s)\n",
-      "83.3% (times since last print: cpu=1.7s wall=1.7s)\n",
-      "84.4% (times since last print: cpu=1.7s wall=1.7s)\n",
-      "85.6% (times since last print: cpu=1.7s wall=1.8s)\n",
-      "86.7% (times since last print: cpu=1.7s wall=1.8s)\n",
-      "87.8% (times since last print: cpu=1.7s wall=1.8s)\n",
-      "88.9% (times since last print: cpu=1.8s wall=1.8s)\n",
-      "90.0% (times since last print: cpu=1.8s wall=1.8s)\n",
-      "91.1% (times since last print: cpu=1.8s wall=1.8s)\n",
-      "92.2% (times since last print: cpu=1.7s wall=1.8s)\n",
-      "93.3% (times since last print: cpu=1.8s wall=1.8s)\n",
-      "94.4% (times since last print: cpu=1.8s wall=1.8s)\n",
-      "95.6% (times since last print: cpu=1.8s wall=1.8s)\n",
-      "96.7% (times since last print: cpu=1.8s wall=1.9s)\n",
-      "97.8% (times since last print: cpu=1.8s wall=1.9s)\n",
-      "98.9% (times since last print: cpu=1.8s wall=1.9s)\n",
-      "100.0% (times since last print: cpu=1.8s wall=1.8s)\n"
      ]
     }
    ],
@@ -220,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -329,11 +222,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "output= xarray.open_dataset(sav_file_path + \"benchmark_case.nc\")"
+    "output= xarray.open_dataset(sav_file_path + \"seeded_benchmark_x_z_sample.nc\")\n",
+    "#output= xarray.open_dataset(sav_file_path + \"benchmark_case.nc\")"
    ]
   },
   {
@@ -343,26 +237,6 @@
    "outputs": [],
    "source": [
     "output= output.transpose(\"T\", \"Z\", \"X\", \"Particles Wet Size Spectrum_bin_left_edges\", \"Particles Dry Size Spectrum_bin_left_edges\", 'radius binned number averaged terminal velocity_bin_left_edges')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(range(70, 89, 1))"
    ]
   },
   {
@@ -719,7 +593,7 @@
     "for i in range(70, 91, 1):\n",
     "    fig, ax = plt.subplots(1, 1, figsize=(8, 6))\n",
     "    output['rain water mixing ratio'][i].plot(ax= ax)\n",
-    "    plt.savefig(\"./output_%d.jpg\"%i, dpi= 300, bbox_inches= \"tight\");"
+    "    #plt.savefig(\"./output_%d.jpg\"%i, dpi= 300, bbox_inches= \"tight\");"
    ]
   },
   {
