fixed nb version

--- a/examples/PySDM_examples/Buch_et_al_2024/plot_script_sd_update_2d.ipynb
+++ b/examples/PySDM_examples/Buch_et_al_2024/plot_script_sd_update_2d.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 2D prescribed flow with time-dependent aerosol injection\n",
     "\n",
-    "Author: Jatan Buch (v1, 240703)"
+    "Author: Jatan Buch (v1, 240703) || (v2, 240916)"
    ]
   },
   {
