fixed cell origin and pos cell

--- a/examples/PySDM_examples/seeding/SH_2012_seeding.ipynb
+++ b/examples/PySDM_examples/seeding/SH_2012_seeding.ipynb
@@ -79,8 +79,7 @@
       "/Users/hyfives-lamont/Desktop/cloud_seeding/PySDM/PySDM/backends/numba.py:46: UserWarning: Disabling Numba threading due to ARM64 CPU (atomics do not work yet)\n",
       "  warnings.warn(\n",
       "/Users/hyfives-lamont/Desktop/cloud_seeding/PySDM/PySDM/backends/numba.py:46: UserWarning: Disabling Numba threading due to ARM64 CPU (atomics do not work yet)\n",
-      "  warnings.warn(\n",
-      "<__array_function__ internals>:200: RuntimeWarning: invalid value encountered in cast\n"
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -110,42 +109,38 @@
     "    super_droplet_injection_rate= lambda time: 5 if 5 * si.min < time < 10 * si.min else 0, #lambda _: 0, \n",
     "    precip=True,\n",
     ")\n",
-    "simulation[key] = Simulation(settings[key])\n",
+    "simulation[key] = Simulation(settings[key])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<__array_function__ internals>:200: RuntimeWarning: invalid value encountered in cast\n"
+     ]
+    }
+   ],
+   "source": [
     "output[key] = simulation[key].run()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "78.51398626585556"
+       "81.99700461002156"
       ]
      },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "output[key].products['rain water mixing ratio'][13].sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "85.40644720723414"
-      ]
-     },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
