--- a/examples/PySDM_examples/Buch_et_al_2024/plot_script_sd_update.ipynb
+++ b/examples/PySDM_examples/Buch_et_al_2024/plot_script_sd_update.ipynb
@@ -100,6 +100,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rho_times_w= 2 * si.kg/si.m**3 * si.m/si.s\n",
+    "\n",
+    "settings = Settings(\n",
+    "    **common_params,\n",
+    "    formulae= Formulae(seed= np.random.randint(1000)),\n",
+    "    rho_times_w_1=rho_times_w,\n",
+    "    precip= True\n",
+    "    )\n",
+    "simulation = Simulation(settings)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
